--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,9 +7,9 @@ server.servlet.context-path=/trackly
 # ==========================================
 # DATABASE POSTGRESQL LOCALE
 # ==========================================
-spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:trackly}
-spring.datasource.username=${DB_USER:trackly}
-spring.datasource.password=${DB_PASSWORD:}
+spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # ==========================================
